Fix discord IDs overflow breaking board rounding

--- a/app/src/pages/GameActive.scss
+++ b/app/src/pages/GameActive.scss
@@ -49,6 +49,7 @@
 }
 
 .game-active-competitor-board-container {
+  display: inline-block;
   border-radius: 10px;
   overflow: hidden;
   padding: -1px;
